--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,9 +29,7 @@ body {
   font-family: var(--texto);
   font-size: 16px;
 }
-button.hamburger {
-  visibility: hidden;
-}
+
 footer {
   background-color: var(--cSecundario);
   color: var(--cTexto);
@@ -62,19 +60,61 @@ img.slide {
   height: auto;
   width: 100%;
 }
+.header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  padding: 0.25rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--cPrincipal);
+  z-index: 999;
+}
 /* Menú - Hamburguesa */
 .btn-menu {
+  border: thin solid var(--cFondo);
+  border-radius: 10%;
+}
+.hamburger {
+  position: relative;
+  z-index: 998;
+}
+.menu {
+  background-color: var(--cPrincipal);
+  opacity: 90%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: all 500ms ease-in-out;
+  transform: translate(0, 120%);
+}
+.menu.is-active {
+  transform: translate(0, 0);
+}
+.menu a {
+  padding: 1rem;
+  width: 100%;
+  display: block;
+  font-size: 2rem;
+  transition: all 0.5s ease-out;
   text-decoration: none;
   color: var(--cFondo);
+  transition: all 0.5s ease-out;
 }
-.direction {
-  display: flex;
-  flex-direction: row;
-}
-
-.menu > ul {
+.menu-style {
   list-style: none;
 }
+/* Termina el menú - Hamburguesa */
+
 .padding1 {
   padding: 0.5em;
 }
@@ -139,12 +179,47 @@ img.slide {
 .movile {
   display: block;
 }
-.redes {
-  background-color: var(--cFondo);
-}
 .spotify {
   margin-left: auto;
   margin-right: auto;
+}
+
+.youtube {
+  height: 12em;
+  width: 100%;
+}
+
+/* ************* Utilities ************* */
+.center {
+  margin: auto;
+}
+.color-btn-cp {
+  color: #fff;
+  background-color: var(--cPrincipal);
+  border-color: var(--cPrincipal);
+}
+.color-btn-ce {
+  color: #fff;
+  background-color: var(--cEnfasis);
+  border-color: var(--cEnfasis);
+}
+.color-btn-cc {
+  color: #fff;
+  background-color: var(--cContraste);
+  border-color: var(--cContraste);
+}
+.color-text-enfasis {
+  color: var(--cEnfasis);
+}
+.bg-c {
+  background-color: #0567a4;
+}
+.bg-c-fondo {
+  background-color: var(--cFondo);
+}
+.shadow- {
+  -webkit-box-shadow: 5px 7px 11px 1px #000;
+  box-shadow: 5px 7px 11px 1px #000;
 }
 .text-card-s {
   font-size: 0.7em;
@@ -152,23 +227,9 @@ img.slide {
 .text-card-t {
   font-size: 0.9em;
 }
-.youtube {
-  height: 12em;
-  width: 100%;
-}
-
-/* ************* Utilities ************* */
-.bg-c {
-  background-color: #0567a4;
-}
-
-.shadow- {
-  -webkit-box-shadow: 5px 7px 11px 1px #000;
-  box-shadow: 5px 7px 11px 1px #000;
-}
 
 /* ************* Media Cueries ************* */
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   footer {
     height: 15vh;
   }
@@ -186,19 +247,7 @@ img.slide {
   button.hamburger {
     visibility: visible;
   }
-  .direction {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .menu {
-    transition: all 500ms ease-in-out;
-    transform: translate(0, -100%);
-  }
-  .menu.is-active {
-    transform: translate(0, 0);
-  }
+
   .icon-redes img {
     height: auto;
     width: 2.5em;
