--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,8 @@
   --cEnfasis: #ff9635;
   --cTexto: #000;
   --cFondo: #f2f2f2;
+  --sPrincipal: #c9c9c9;
+  --sSecundaria: #ffffff;
   --texto: "Roboto", sans-serif;
 }
 
@@ -129,6 +131,83 @@ img.slide {
   width: auto;
 }
 /* Termina - Buttom Theme */
+
+/* Caorrousel */
+
+.carrousel {
+  width: 100%;
+  max-width: 120em;
+  padding: 2em;
+  color: var(--cSecundario);
+
+  transition: all 0.4s ease;
+  border-radius: 1em;
+  background-color: var(--blanco);
+  box-shadow: 1em 1em 2em var(--sPrincipal), -1em -1em 2em var(--sSecundaria),
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
+  overflow-x: hidden;
+}
+.carrousel .grande {
+  width: 305%;
+  color: var(--cSecundario);
+
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+
+  transition: all 0.4s ease;
+  border-radius: 1em;
+  background-color: var(--cFondo);
+  box-shadow: 1em 1em 2em var(--sPrincipal), -1em -1em 2em var(--sSecundaria),
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
+  padding: 2em;
+  transition: all 0.5s ease;
+  transform: translateX(0%);
+}
+.carrousel .img-carrousel {
+  width: calc(100% / 3);
+  min-height: 10vh;
+  margin-right: 2em;
+  color: var(--cSecundario);
+  transition: all 0.4s ease;
+  border-radius: 1em;
+  background-color: var(--cFondo);
+  box-shadow: 1em 1em 2em var(--sPrincipal), -1em -1em 2em var(--sSecundaria),
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
+}
+.carrousel .puntos {
+  width: 100%;
+  margin: 1em 0 0;
+  padding: 0.4em;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.carrousel .punto {
+  width: 2em;
+  height: 2em;
+  margin: 1em 1em 0;
+  color: var(--cSecundario);
+  transition: all 0.4s ease;
+  border-radius: 1em;
+  background-color: var(--cFondo);
+  box-shadow: 0.6em 0.6em 1.2em var(--sPrincipal),
+    -0.6em -0.6em 1.2em var(--sSecundaria), inset 0 0 0 transparent,
+    inset 0 0 0 transparent;
+}
+
+.carrousel .punto.activo {
+  background-color: var(--cPrincipal);
+}
+
+.img-carrousel {
+  width: 100%;
+  height: auto;
+}
+/* Termina - Carrousel */
 .padding1 {
   padding: 0.5em;
 }
